# grf

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  compress_all.c  extract_all.c  make_new.c
grfbuilder/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
includes/: grf.h  hash_tables.h  libgrf.h  unicode_table_uhc.h
src/: euc_kr.c  grf.c  hash_tables.c  main.c  test.c  zlib.c
